aks/mortgage.fixedrates.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortgagefixedrates
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
    - port : 443
      name: https
  selector:
    app: mortgagefixedrates
