aks/mortgage.variablerates.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortgagevariablerates
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
    - port : 443
      name: https
  selector:
    app: mortgagevariablerates
