aks/aks-helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - mortgageappdns.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: mortgageappdns.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: mortgageui
          servicePort: 80
