aks/mortgage.fixedrates.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mortgagefixedrates-ingress
spec:
  tls:
  - hosts:
    - fixedrates.mortgage.iliasjennane.com
    secretName: letsencrypt-staging
  rules:
  - host: fixedrates.mortgage.iliasjennane.com
    http:
      paths:
      - backend:
          serviceName: mortgagefixedrates
          servicePort: 80
